--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "nodemon": "^3.1.9",
-    "pg": "^8.14.1"
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "joi": "^17.13.3",
+    "pg": "^8.14.1",
+    "pinata": "^2.2.1",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "nodemon": "^3.1.10"
   }
 }
